--- a/roles/runner/vars/main.yml
+++ b/roles/runner/vars/main.yml
@@ -32,13 +32,13 @@ _gitlab_runner_unregistration_command: >-
 _gitlab_runner_config_state_hash_wanted: >
   {{ (gitlab_runner_ci_server_url
   + gitlab_runner_registration_token
-  + gitlab_runner_tags | default("NONE") | join() | string
-  + gitlab_runner_executor | default("NONE")
+  + gitlab_runner_tags | default(omit) | join() | string
+  + gitlab_runner_executor | default(omit)
   + gitlab_runner_run_untagged | string
   + gitlab_runner_limit | string
   + gitlab_runner_docker_image
   + gitlab_runner_docker_privileged | string
-  + gitlab_runner_docker_runtime | default("NONE")
+  + gitlab_runner_docker_runtime | default(omit)
   + gitlab_runner_allow_custom_build_dir | string)
   | ansible.builtin.password_hash("sha256", "runner")
   }}
